--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,5 +29,8 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "vite": "^6.1.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-darwin-arm64": "4.56.0"
   }
 }
